Добавлен вывод количества пользователей общее и в поиске
